<resources>
    <string name="app_name">Maksi_0.1</string>

    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>

    <string name="action_settings">Настройки</string>
    <string name="nav_discounts">Акции и скидки</string>
    <string name="nav_shopping_list">Списки покупок</string>
    <string name="nav_shops">Магазины</string>
    <string name="nav_callback">Отзывы и пожелания</string>
    <string name="nav_card">Карта покупателя</string>
    <string name="nav_customer">Тайный покупатель</string>
    <string name="maxi_desc">
        Сеть магазинов «Макси» - это 3 гипермаркета и 16 супермаркетов.\n
        Супермаркеты расположены в разных районах Вологды и еще один - в Череповце (ул. Наседкина, 15).
        Гипермаркеты - в Вологде на Пошехонском шоссе, 22, в Череповце на проспекте Победы, 200 и ул. Архангельской, 43,
        а также в Архангельске - на Ленинградском проспекте, 38.
    </string>
    <string name="maxi_desc_aboutcards">
        Магазины «Макси» предлагают разнообразные специальные предложения для владельцев карт постоянного покупателя.
        За покупки начисляются баллы, с помощью которых можно получить скидку до 50% от суммы покупки.
        При использовании карты постоянного покупателя в супермаркетах «Макси» в период проведения маркетинговых акций начисляются электронные фишки,
        которые позволяют покупать товары в магазинах «Макси» с большой скидкой или специальной цене.
    </string>
    <string name="preauth_alert">
        Привязав карту в мобильном приложении, Вы получите доступ к информации о покупках по карте, балансе баллов и фишек.
        Вы также получите возможность списать баллы или фишки, используя Ваше мобильное устройсто на кассе.\n
        Эти возможности будут доступны любому лицу, которое пользуется Вашим устройством и\или имеет доступ к Вашему аккаунту.
        Вы должны самостоятельно принимать меры по предотвращению доступа посторонних лиц к Вашему аккаунту.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_motto">Вся семья довольна</string>
    <string name="default_card_value">00000000</string>
    <string name="cardnum_text">Номер карты</string>
    <string name="qr_about">
        Покажите этот экран кассиру перед оплатой покупки в любом магазине Макси. \n\n
        При предъявлении данного штрих-кода Вы можете пользоваться всеми возможностями пластиковой карты.
    </string>
    <string name="accept_cb">Я являюсь владельцем карты</string>
    <string name="okbutton">Привязать карту</string>
</resources>
