<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discounts"
            android:icon="@mipmap/ic_redeem_white_24dp"
            android:title="@string/nav_discounts" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@mipmap/ic_format_list_bulleted_white_24dp"
            android:title="@string/nav_shopping_list" />
        <item
            android:id="@+id/nav_shops"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/nav_shops" />

        <item
            android:id="@+id/nav_callback"
            android:icon="@mipmap/ic_comment_white_24dp"
            android:title="@string/nav_callback" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@mipmap/ic_gavel_white_24dp"
            android:title="@string/nav_customer" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="Настройки профиля" />
        <item
            android:id="@+id/nav_card"
            android:icon="@mipmap/ic_credit_card_white_24dp"
            android:title="@string/nav_card" />
    </group>

</menu>
